# agensus_serverless

./: .dockerignore  .env.localstack  README.md  pyproject.toml
lambdas/load/: Dockerfile  main.py  pyproject.toml
lambdas/transform/: Dockerfile  main.py  pyproject.toml
shared/: callbacks.py  chunker.py  config.py  db.py  models.py  pyproject.toml  sqs.py  vectorizer.py
statemachines/: ingestion_pipeline.asl.json
tests/: test_extract_lambda.py  test_load_lambda.py  test_transform_lambda.py
workers/extract/: Dockerfile  Dockerfile.base  main.py  pyproject.toml
