[project]
name = "aws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-powertools>=3.26.0",
    "aws-lambda-typing>=2.20.0",
]

[tool.uv.workspace]
members = [
    "lambdas/extract",
    "lambdas/transform",
    "lambdas/load",
    "shared",
]

