[project]
name = "transform"
version = "0.1.0"
description = "Transform lambda: chunks extracted document text"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-powertools>=3.26.0",
    "aws-lambda-typing>=2.20.0",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }
